# ml-grmhd-primitive-recovery

./: .gitignore  README.md  pyproject.toml
conservative_to_primitive/: cuda_check.py  data_loader.py  fnn.py  hyperparam_optimization.py  main.py  trainer.py
