[tool.poetry]
name = "conservative-to-primitive"
version = "0.1.0"
description = ""
authors = ["parth <parthsethia33@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
torch = { url = "https://download.pytorch.org/whl/cu116/torch-1.12.1%2Bcu116-cp310-cp310-win_amd64.whl"}
pandas = "^2.2.3"
jupyter = "^1.1.1"
scikit-learn = "^1.6.1"
numpy = "1.26.4"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
optuna = "^4.2.1"
plotly = "^6.0.1"
pycuda = "^2025.1"
tensorrt = "^10.9.0.34"
onnx = "^1.17.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
